# uk-reg-monitor

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  y
src/uk_reg_monitor/: __init__.py  __main__.py  cli.py  client.py  config.py  notifier.py  scheduler.py
tests/: test_cli.py  test_client.py  test_config.py  test_notifier.py  test_scheduler.py
